[package]
name = "lprun"
version = "0.1.0"
authors = ["snsvrno <snsvrno@tuta.io>"]

[dependencies]
clap = "2.29.1"
ansi_term = "0.10.2"

version = { git = "https://github.com/Snsvrno/version-lp-rs", tag = "0.1.3" }
platform = { git = "https://github.com/Snsvrno/platform-lp-rs", tag = "0.1.4" }
lpsettings = { git = "https://github.com/Snsvrno/lpsettings-rs", tag = "0.1.4" }

love = { path = "../../libraries/love-rs" }